Z-index fixed, need to create a function to close the overlay if someone click outside of it

--- a/mon_site/css/main.css
+++ b/mon_site/css/main.css
@@ -8,6 +8,7 @@ body {
     background-color: #f1f1f1;
     margin: 0px;
     font-family: "Roboto Mono", monospace;
+    position: relative;
 }
 
 p {
