--- a/mon_site/css/styles.css
+++ b/mon_site/css/styles.css
@@ -14,6 +14,7 @@
     border: solid 1px black;
     background-color: rgb(0, 0, 0);
     margin: 0px 15px 15px;
+    position: relative;
 }
 
 .nom-lac {
@@ -62,6 +63,9 @@
     height: 20px;
     justify-self: end;
     padding: 2px;
+    position: absolute;
+    right: 5px;
+    top: 5px;
 }
 
 /* Bannières des mes pages */
@@ -490,7 +494,6 @@ textarea {
     height: 750px;
     width: 750px;
     border: 2px solid black;
-    z-index: 2;
 }
 
 /* Popup leaflet map mise en page */
@@ -547,23 +550,25 @@ textarea {
 
 #overlay1 {
     position: fixed;
-    top: 0;
+    top: 10px;
     right: -100%; /* Il est caché à l'extérieur de l'écran à -100% */
-    height: 80%;
+    height: 90%;
     width: 500px;
     background-color: #ff3fc5;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
     animation: slideIn 0.8s ease; /* Animation fluide de mon overlay */
+    z-index: 1000;
 }
 #overlay2 {
     position: fixed;
-    top: 0;
+    top: 10px;
     right: -100%; /* Il est caché à l'extérieur de l'écran à -100% */
-    height: 80%;
+    height: 90%;
     width: 500px;
     background-color: #503f4b;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
     animation: slideIn 0.8s ease; /* Animation fluide de mon overlay */
+    z-index: 1000;
 }
 
 /* Configuration du slideIn (donc l'animation) à 0% de l'animation mon overlay est toujours en dehors de l'écran, à 100% il est à sa postion définie sur ma page et visible */
